# qwen3-vl-computer-use-mole-server

./: .gitignore  CODE_QUALITY.md  CODING_STEPS.md  README.md  agents.md  generator.py  mypy.ini  pyproject.toml
.claude/: cto-progress.md  progress.md
.claude/plans/: inference-server-separation.md
.claude/research/: inference-server-separation.md
config/: dataset.yaml  loras.json
docs/: label-to-lora-mapping.md  moe-gpt.md  mole-paper-notes.md  router-data-eval-plan.md  router-train-blocker.md  routing-dataset-workflow.md  vision-router-workflow.md
docs/sample-data/: data.jsonl
modal/: deploy.py  eval.py  eval_router.py  generate.py  generate_routing.py  history.py  link_router_data.py  preprocess.py  preprocess_ocr.py  preprocess_router.py  router_inference.py  router_preprocess.py  router_train.py  stacked_inference.py  test.py  train_router.py  train_router_lora.py  training.py  upload_and_unpack.py
plans/: moe-lora-implementation-plan.md  router-lora-guide.md  simplified-routing-proposal.md
prompts/: SYSTEM_PROMPT.txt
routing-generator/: README.md  generate.py  generate_ocr_routing.py  ocr_prompts.py
scripts/: backfill_history.py  cleanup-tensorboard.sh  convert_routing_to_classification.py  deploy-latest.sh  deploy.sh  eval.sh  generate.sh  generate_dataset.sh  generate_ocr_crops.py  generate_routing_data.py  pre-commit.sh  preprocess.sh  preprocess_dataset.sh  save_lora.sh  tensorboard.sh  test.sh  train-fast.sh  train.sh  train_router.sh  upload.sh  upload_dataset.sh  upload_routing_data.py
utils/: check_docstrings.py
(+4 files in other folders)
