[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mole-trainer-server"
version = "0.1.0"
description = "MoE LoRA trainer server for ClaimHawk"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
